# GasGuard

./: Cargo.toml
.github/workflows/: ci.yml
apps/api/src/: main.rs
apps/api/src/recommendation/routes/stellar/: engine.ts  index.ts  scorer.ts  types.ts  weights.ts
libs/analysis-core/: Cargo.toml  DSL_IMPLEMENTATION_REPORT.md
libs/analysis-core/src/: lib.rs
libs/analysis-core/src/dsl/: ast.rs  builtins.rs  compiler.rs  error.rs  example_rules.dsl  lexer.rs  mod.rs  parser.rs  verification_test.rs
libs/analysis-core/src/plugin/: registry.rs
libs/engine/src/: analyzer.rs  incremental_scanner.rs  scanner.rs  tiered_scanner.rs
libs/plugin-system/src/: lib.rs
src/analysis/conflicts/: conflict-detector.spec.ts  conflict-detector.ts  conflict-warned.ts  index.ts  types.ts
