[workspace]
resolver = "2"
members = [
    "packages/cli",
    "packages/rules",
    "libs/analysis-core",
    "libs/engine", 
    "libs/ast",
    "libs/parsers/rust",
    "libs/parsers/solidity",
    "libs/parsers/vyper",
    "libs/rule-engine",
    "libs/plugin-system",
    "libs/auto-fix",
    "apps/api",
    "tests/mutation"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GasGuard Team"]
license = "MIT"
description = "Automated Optimization Suite for Stellar Soroban Contracts"
